# nvox-assignment

./: .gitignore  ARCHITECTURE_DECISIONS.md  README.md  ROUTING_MANAGEMENT.md  package-lock.json  pyproject.toml
apps/nvox-api/: DB_erd.md  Dockerfile  Nvox_Journey_API.postman_collection.json  README.md  ROUTING_RULES_GUIDE.md  docker-compose.yaml  pyproject.toml  pytest.ini
apps/nvox-api/config/: edges-descriptions.md  journey_config.json  routing_rules.csv
apps/nvox-api/docs/: ARCHITECTURE_DECISIONS.md  DB_erd.md  ROUTING_FLOW.md  ROUTING_MANAGEMENT.md  ROUTING_RULES_GUIDE.md
apps/nvox-api/guidelines/: Postman.md  api-routes.md  dependencies.md  repositories.md  security.md
apps/nvox-api/migrations/: 001_init.sql  002_add_sessions.sql  003_add_journey_tables.sql  004_add_journey_edges_table.sql  005_populate_journey_edges.sql
apps/nvox-api/scripts/: generate_edge_migration.py  seed_demo_data.py
apps/nvox-api/src/: main.py
apps/nvox-api/src/api/: main.py
apps/nvox-api/src/api/models/: auth.py  (+1 more)
apps/nvox-api/src/dependencies/: __init__.py  auth.py  db.py  redis.py  repositories.py
apps/nvox-api/src/journey/: __init__.py  config_loader.py  graph_models.py  routing_engine.py  rules_loader.py
apps/nvox-api/src/repositories/: db_models.py  graph_repository.py  journey_repository.py  schema_validator.py  session_repository.py  user_repository.py
apps/nvox-api/src/utils/: hashing.py  jwt.py
apps/nvox-api/tests/: Test_coverage.md  conftest.py
apps/nvox-api/tests/integration/: test_auth_endpoints.py  test_journey_edge_cases.py  test_journey_endpoints.py
(+35 files in other folders)
