[project]
name = "nvox"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "auth>=0.5.3",
    "uvicorn>=0.38.0",
]


[tool.uv.workspace]
members = [
    "packages/*",
	 "apps/nvox-api",
]

[tool.uv.sources]
nvox-db = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'
